mp1/compiler_errors.txt
compilation of version 18 failed with:
mkdir -p obj
cc -g -Wall -Wextra -Wno-sign-compare -c -o obj/http_server.o src/http_server.c
src/http_server.c: In function ‘sigchld_handler’:
src/http_server.c:33:26: warning: unused parameter ‘s’ [-Wunused-parameter]
 void sigchld_handler(int s)
                          ^
src/http_server.c: In function ‘main’:
src/http_server.c:208:6: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
      while(num_bytes=fgets(filebuff, MAXIMUMDATA-1,pfile)!=NULL){
      ^
src/http_server.c:211:22: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘size_t {aka long unsigned int}’ [-Wformat=]
               printf("numof bytes sent:%d\n",strlen(filebuff));
                      ^
src/http_server.c:189:8: warning: unused variable ‘numsent’ [-Wunused-variable]
    int numsent;
        ^
src/http_server.c:58:6: warning: variable ‘recvsize’ set but not used [-Wunused-but-set-variable]
  int recvsize;
      ^
cc -g -Wall -Wextra -Wno-sign-compare obj/http_server.o -o http_server 
cc -g -Wall -Wextra -Wno-sign-compare -c -o obj/http_client.o src/http_client.c
src/http_client.c: In function ‘main’:
src/http_client.c:172:20: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
       char portb = port;
                    ^
src/http_client.c:231:26: error: ‘MAXIMUMDATA’ undeclared (first use in this function)
   memset(recvingbuf,'\0',MAXIMUMDATA);
                          ^
src/http_client.c:231:26: note: each undeclared identifier is reported only once for each function it appears in
src/http_client.c:172:12: warning: unused variable ‘portb’ [-Wunused-variable]
       char portb = port;
            ^
Makefile:66: recipe for target 'obj/http_client.o' failed
make: *** [obj/http_client.o] Error 1
 

